@@ -8,6 +8,7 @@ import pytest
 
 from flexmock import flexmock
 
+from pyp2rpmlib.archive import Archive
 from pyp2rpmlib.metadata_extractors import *
 from pyp2rpmlib import settings
 
@@ -27,53 +28,13 @@ class TestMetadataExtractor(object):
                   MetadataExtractor('%sbitarray-0.8.0.tar.gz' % self.td_dir, 'bitarray', '0.8.0'),
                  ]
 
-    @pytest.mark.parametrize(('i', 's', 'expected'), [
-        (0, '.gz',  TarFile),
-        (1, '.zip', ZipFile),
-        (2, '.gz', TarFile),
-        (3, '.egg', ZipFile),
-        (4, '.tar', TarFile),
-    ])
-    def test_get_extractor_cls(self, i, s, expected):
-        assert self.e[i].get_extractor_cls(s) == expected
-
-    @pytest.mark.parametrize(('i', 'n', 'a', 'expected'), [
-        (0, 'setup.cfg', False, '[egg_info]\r\ntag_build = \r\ntag_date = 0\r\ntag_svn_revision = 0\r\n\r\n'),
-        (1, 'requires.txt', False, 'py>=1.4.7.dev2'),
-        (1, 'pytest-2.2.3/pytest.egg-info/requires.txt', True, 'py>=1.4.7.dev2'),
-        (2, 'does_not_exist.dne', False,  None),
-        (4, 'in_unextractable', False, None),
-    ])
-    def test_get_content_of_file_from_archive(self, i, n, a, expected):
-        assert self.e[i].get_content_of_file_from_archive(n, a) == expected
-
-    def test_find_list_argument_not_present(self):
-        flexmock(self.e[4]).should_receive('get_content_of_file_from_archive').with_args('setup.py').and_return('install_requires=["spam",\n"eggs"]')
-        assert self.e[4].find_list_argument('setup_requires') == []
-
-    def test_find_list_argument_present(self):
-        flexmock(self.e[4]).should_receive('get_content_of_file_from_archive').with_args('setup.py').and_return('install_requires=["beans",\n"spam"]\nsetup_requires=["spam"]')
-        assert self.e[4].find_list_argument('install_requires') == ['beans', 'spam']
-
-    def test_find_list_argument_unopenable_file(self):
-        flexmock(self.e[4]).should_receive('get_content_of_file_from_archive').with_args('setup.py').and_return(None)
-        assert self.e[4].find_list_argument('install_requires') == []
-
     def test_runtime_deps_from_egg_info_no_deps(self):
-        flexmock(self.e[3]).should_receive('get_content_of_file_from_archive').with_args('EGG-INFO/requires.txt', True).and_return('')
+        flexmock(Archive).should_receive('get_content_of_file').with_args('EGG-INFO/requires.txt', True).and_return('')
         assert self.e[3].runtime_deps_from_egg_info == []
 
     def test_runtime_deps_from_egg_info_some_deps(self):
-        flexmock(self.e[3]).should_receive('get_content_of_file_from_archive').with_args('EGG-INFO/requires.txt', True).and_return('spam>1.0\n\n')
+        flexmock(Archive).should_receive('get_content_of_file').with_args('EGG-INFO/requires.txt', True).and_return('spam>1.0\n\n')
         assert len(self.e[3].runtime_deps_from_egg_info) == 1
-
-    @pytest.mark.parametrize(('i', 'suf', 'expected'), [
-        (0, ['.spamspamspam'],  False),
-        (1, '.py', True),
-        (4, ['.eggs'], False),
-    ])
-    def test_has_file_with_suffix(self, i, suf, expected):
-        assert self.e[i].has_file_with_suffix(suf) == expected
 
     @pytest.mark.parametrize(('i', 'expected'), [
         (0, True),
@@ -82,7 +43,8 @@ class TestMetadataExtractor(object):
         (4, False),
     ])
     def test_has_bundled_egg_info(self, i, expected):
-        assert self.e[i].has_bundled_egg_info == expected
+        with self.e[i].archive as a:
+            assert self.e[i].has_bundled_egg_info == expected
 
     @pytest.mark.parametrize(('i', 'expected'), [
         (0, False),
@@ -91,7 +53,8 @@ class TestMetadataExtractor(object):
         (5, True),
     ])
     def test_has_extension(self, i, expected):
-        assert self.e[i].has_extension == expected
+        with self.e[i].archive as a:
+            assert self.e[i].has_extension == expected
 
 
 class TestPypiMetadataExtractor(object):
@@ -125,4 +88,21 @@ class TestPypiMetadataExtractor(object):
     ])
     def test_extract(self, what, expected):
         data = self.e.extract_data()
+        assert getattr(data, what) == expected
+
+class TestLocalMetadataExtractor(object):
+    td_dir = '%s/test_data/' % tests_dir
+
+    def setup_method(self, method): # test for non-egg and egg
+        self.e = [LocalMetadataExtractor('%splumbum-0.9.0.tar.gz' % self.td_dir, 'plumbum', '0.9.0'),
+                  LocalMetadataExtractor('%sSphinx-1.1.3-py2.6.egg' % self.td_dir, 'Sphinx', '1.1.3')
+                 ]
+
+    @pytest.mark.parametrize(('i', 'what', 'expected'), [
+        (0, 'description', 'TODO:'), # try random non-set attribute
+        (0, 'license','MIT'),
+        (1, 'license', 'BSD'),
+    ])
+    def test_extract(self, i, what, expected):
+        data = self.e[i].extract_data()
         assert getattr(data, what) == expected
